samples/_failures_safe/1761392565_0e6034_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d81fe26.c:2:2: error: expected ‘;’ before ‘typedef’
    2 | c
      |  ^
      |  ;
./samples/SAFE/__tmp_8d81fe26.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_8d81fe26.c:175:5: error: expected declaration or statement at end of input
  175 |     eof_token.type = TOKEN_EOF;
      |     ^~~~~~~~~
